# stellar-onchainpoll

./: .gitignore  README.md
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AdminPanel.tsx  EventFeed.tsx  Hero.tsx  PollCard.tsx  StatsBar.tsx  SuccessConfetti.tsx  TxStatusPanel.tsx  WalletSection.tsx
frontend/hooks/: useAdmin.ts  usePoll.ts
frontend/lib/: events.ts  stellar-contract.ts  wallet.ts
frontend/scripts/: init-poll.mjs
frontend/types/: index.ts
scripts/: deploy-contract.sh
